--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "npx nodemon"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
